<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>

    <string name="login">Login</string>
    <string name="edit_message">Login Name</string>
    <string name="password">Password</string>
    <string name="switch_text">What does this do?</string>
    <string name="checkbox_text">CheckBox</string>
    <string name="radio_btn_text">RadioButton</string>

    <string name="login_button">Login</string>
    dialog_message
    <string name="dialog_title">Finish Activity</string>
    <string name="dialog_message">Do you wish to finish?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="response">Here is my response</string>
    <string name="switch_toast_message_on">Switch is On</string>
    <string name="switch_toast_message_off">Switch is Off</string>

    <string name="start_chat">Start Chat</string>
    <string name="send_button">Send</string>
    <string name="test_toolbar">Test Toolbar</string>
    <string name="action_one">One</string>
    <string name="action_two">Two</string>
    <string name="action_three">Three</string>
    <string name="action_about">About</string>
    <string name="tb_dialog_title">Do you want to go back?</string>
    <string name="new_message">New Message</string>

    <string name="title_activity_test_toolbar">TestToolbar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="weather_button">Weather Forecast</string>
</resources>