<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_one"
        app:showAsAction="always"
        android:icon="@drawable/icons8bookmark24"
        android:orderInCategory="101"
        android:title="@string/action_one" />

    <item
        android:id="@+id/action_two"
        app:showAsAction="always"
        android:icon="@drawable/icons8connect24"
        android:orderInCategory="102"
        android:title="@string/action_two" />

    <item
        android:id="@+id/action_three"
        app:showAsAction="always"
        android:icon="@drawable/icons8delete24"
        android:orderInCategory="103"
        android:title="@string/action_three" />

    <item
        android:id="@+id/action_about"
        app:showAsAction="never"
        android:orderInCategory="104"
        android:title="@string/action_about" />
</menu>